--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton|Ubuntu:300" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rammetto+One|Montserrat:300,400" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/timecircles/1.5.3/TimeCircles.min.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
