--- a/public/index.html
+++ b/public/index.html
@@ -22,5 +22,7 @@
         Denne nettsiden krever at du ikke blokkerer JavaScript. Den er skrevet i det fete språket Elm - sjekk det ut på http://elm-lang.org!
     </noscript>
     <div id="root"></div>
+
+    <script src="%PUBLIC_URL%/js/draw-worm.js"></script>
 </body>
 </html>
