--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbnrS7blHJOqMRL-3Yq8j2cXfyRJCQVcg&amp;language=no&amp;region=NO"></script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <title>RønsenROCK</title>
 </head>
 <body>
