--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <title>RønsenROCK</title>
+    <!--[if IE]>
+        <style>.ie { display: block; }</style>
+    <![endif]-->
 </head>
 <body>
     <noscript>
