--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/timecircles/1.5.3/TimeCircles.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbnrS7blHJOqMRL-3Yq8j2cXfyRJCQVcg&amp;language=no&amp;region=NO"></script>
+    <!--[if IE]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
@@ -23,7 +26,7 @@
     </noscript>
     <div id="root"></div>
     <!--[if IE]>
-        <style>.ie { display: block; }</style>
+    <style>.ie { display: block; }</style>
     <![endif]-->
 </body>
 </html>
