Switch from Google Maps to Mapbox, as Google now requires billing information to be registered, even for applications with super low volume

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,13 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rammetto+One|Montserrat:300,400" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/timecircles/1.5.3/TimeCircles.min.css" />
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css" />
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v3.1.3/mapbox-gl-directions.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/timecircles/1.5.3/TimeCircles.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbnrS7blHJOqMRL-3Yq8j2cXfyRJCQVcg&amp;language=no&amp;region=NO"></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js"></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v3.1.3/mapbox-gl-directions.js"></script>
     <!--[if IE]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
